# Homework_07

./: README.md  main.py  pyproject.toml  seeds.py
migrations/versions/: 1e35c7bbe4b3_init.py
