[tool.poetry]
name = "homework-07"
version = "0.1.0"
description = ""
authors = ["Dmytro Lyfenko <114363730+Lyfenko@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "homework_07"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.7"
alembic = "^1.10.2"
faker = "^18.3.1"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
